2006-03-13  Brian Cameron  <brian.cameron@sun.com>

	* acconfig.h, daemon/gdm.h: Remove X_XNEST_DISPLAY_ARG here also.
	* daemon/gdmconfig.c: Remove duplicate line.

2006-03-13  Brian Cameron  <brian.cameron@sun.com>

	* configure.ac, daemon/server.c, daemon/gdmconfig.c,
	  config/gdm.conf.in, config/Makefile.am: Remove 
	  XnestDisplayArg configuration choice.  In discussion with
	  Alan Coopersmith <Alan.Coopersmith@sun.com> from the Xserver
	  team it should be fine to avoid using -display when calling
	  Xnest/Xephyr all the time and just use the DISPLAY environment
	  variable.  Better to not add a configuration choice if it is
	  not needed.

2006-03-13  Brian Cameron  <brian.cameron@sun.com>

	* config/gdm.conf.in: Update comment to show some example
	  Xnest commands.

2006-03-13  Brian Cameron  <brian.cameron@sun.com>

	* configure.ac, daemon/Makefile.am: No longer link with dbus
	  unless ConsoleKit is enabled.  Patch by William Jon McCann
 	  <mccann@jhu.edu>.

2006-03-13  Brian Cameron  <brian.cameron@sun.com>

	* configure.ac, acconfig.h, daemon/Makefile.am, daemon/gdm.h
	  daemon/server.c, daemon/gdmconfig.c, config/gdm.conf.in,
	  config/Makefile.am:  Add Xephyr support and fix problem with
	  using Xsun Xnest with Xorg 7.2.  Xsun doesn't like font path
	  values that have the ":unscaled" suffix.  This required adding	
	  two new configuration options XnestDisplayArg and 
	  XnestUnscaledFontPath so that the user can configure whether
	  the Xnest command uses the -display argument or the DISPLAY
	  environment variable, and to specify whether to strip the
	  ":unscaled" bits from the fontpath.  Modified configure so
	  that if Xephyr is on the system, it is used as the Xnest
	  program since it works better than Xnest.
	* daemon/gdmconfig.h: No longer set default values for the
	  configuration choices here since default are set in
	  daemon/gdm.h.
	* config/gdm.conf.in: Comment now says "true" for ConfigAvailable