@@ -107,7 +107,6 @@ sysxkbmap=/etc/X11/Xkbmap
 rh6sysresources=/etc/X11/xinit/Xresources 
 rh6sysmodmap=/etc/X11/xinit/Xmodmap 
 
-
 # merge in defaults
 if [ -f "$rh6sysresources" ]; then
     xrdb -merge "$rh6sysresources"
