@@ -1,3 +1,10 @@
+2006-03-20  Brian Cameron  <brian.cameron@sun.com>
+
+	* config/Init.in: Call xrdb -merge /etc/X11/Xresources in the Init
+	  script so that the GDM GUI is properly configured with xft 
+	  resources.
+	* config/Xsession.in: Minor cleanup.
+
 2006-03-13  Brian Cameron  <brian.cameron@sun.com>
 
 	* acconfig.h, daemon/gdm.h: Remove X_XNEST_DISPLAY_ARG here also.
